deployment/develop/kubernetes/deployment-rank.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: rank
  name: rank
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rank
  template:
    metadata:
      labels:
        app: rank
    spec:
      containers:
      - name: rank
        image: rank:dev
        imagePullPolicy: Never
        resources:
          requests:
            cpu: 200m
            memory: 512Mi
          limits:
            cpu: '1'
            memory: 2Gi
        ports:
        - name: web
          containerPort: 8080
          protocol: TCP
        - name: debugger
          containerPort: 8000
          protocol: TCP
