deployment/develop/kubernetes/statefulset-articledb.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: articledb
  name: articledb
spec:
  replicas: 1
  serviceName: articledb
  selector:
    matchLabels:
      app: articledb
  template:
    metadata:
      labels:
        app: articledb
    spec:
      containers:
      - name: postgres
        image: postgres:13-alpine
        resources: {}
        ports:
        - name: postgres
          containerPort: 5432
          protocol: TCP
        volumeMounts:
        - name: dbschema
          mountPath: /docker-entrypoint-initdb.d/schema.sql
          subPath: schema.sql
      volumes:
      - name: dbschema
        configMap:
          name: article-init-db
