deployment/develop/kubernetes/statefulset-rankdb.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: rankdb
  name: rankdb
spec:
  replicas: 1
  serviceName: rankdb
  selector:
    matchLabels:
      app: rankdb
  template:
    metadata:
      labels:
        app: rankdb
    spec:
      containers:
      - name: postgres
        image: postgres:13-alpine
        resources: {}
        ports:
        - name: postgres
          containerPort: 5432
          protocol: TCP
        volumeMounts:
        - name: dbschema
          mountPath: /docker-entrypoint-initdb.d/schema.sql
          subPath: schema.sql
      volumes:
      - name: dbschema
        configMap:
          name: rank-init-db
