deployment/develop/kubernetes/service-article.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: article
  name: article
spec:
  type: ClusterIP
  selector:
    app: article
  ports:
  - name: web
    port: 8080
    targetPort: 8080
  # don't expose debugger port
