deployment/develop/kubernetes/service-articledb.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: articledb
  name: articledb
spec:
  type: ClusterIP
  selector:
    app: articledb
  ports:
  - name: postgres
    port: 5432
    targetPort: 5432
