deployment/develop/kubernetes/service-rank.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: rank
  name: rank
spec:
  type: ClusterIP
  selector:
    app: rank
  ports:
  - name: web
    port: 8080
    targetPort: 8080
  # don't expose debugger port
