deployment/develop/kubernetes/service-rankdb.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: rankdb
  name: rankdb
spec:
  type: ClusterIP
  selector:
    app: rankdb
  ports:
  - name: postgres
    port: 5432
    targetPort: 5432
