deployment/develop/kubernetes/service-website.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: website
  name: website
spec:
  type: ClusterIP
  selector:
    app: website
  ports:
  - name: web
    port: 3000
    targetPort: web
  # don't expose debugger port
