deployment/develop/kubernetes/ingress-accesscount.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: accesscount
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: accesscount
            port: 
              number: 8080
        path: /api/accesscounts
        pathType: Prefix
