deployment/develop/kubernetes/ingress-article.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: article
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: article
            port: 
              number: 8080
        path: /api/articles
        pathType: Prefix
