deployment/develop/kubernetes/ingress-rank.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rank
  #  annotations:
  #  kubernetes.io/ingress.class: traefik
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: rank
            port:
              name: web
        path: /api/ranks
        pathType: Prefix
