deployment/develop/kubernetes/ingress-website.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: website
  #  annotations:
  #  kubernetes.io/ingress.class: traefik
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: website
            port:
              name: web
        path: /
        pathType: Prefix
